# Nextis_Bridge

./: .gitignore  CLAUDE.md  README.md  big_plan.md  calibrate_encoder.py  configure_all_motors_mit.py  debug_cuda.py  debug_cv_string.py  debug_feetech.py  debug_feetech_values.py  debug_import.py  debug_log.txt  debug_realsense.py  debug_scan.py  fix_feetech_offsets.py  fix_leader_calibration.py  gravity_right_leader.json  gripper_diagnostic.py  inspect_leader.py  manifesto.md  pyproject.toml  reproduce_homing.py  reproduce_issue.py  requirements.txt  rezero_motor.py  run_backend.py  scan_feetech.py  scan_ports.py  setup_can.sh  start.sh  startup_debug.txt  stop.sh  test_damiao_socketcan.py  test_discovery.py  test_filtering.py  test_gemini.py  test_link1.py  test_link1_diagnostic.py  test_link2_recovery.py  test_mit_mode_position.py  (+7 more)
app/: dependencies.py  main.py  state.py
calibration_gravity/: gravity_right_follower.json  gravity_right_leader.json
calibration_profiles/: active_profiles.json
frontend/: package-lock.json  package.json
pipelines/: PickInsert2.json  pick_insert.json
scripts/: calibrate_encoder.py  calibrate_gravity.py  calibrate_grippers.py  configure_all_motors_mit.py  debug_feetech_raw.py  debug_homing_full.py  debug_offset_limits.py  debug_offset_scaling.py  debug_robot.py  edit_calibration.py  flash_trigger.py  force_reset_offsets.py  migrate_calibration.py  nuclear_reset_calibration.py  rezero_motor.py  test_limits_reset.py  test_mode_switch.py  test_scaling_threshold.py
tests/: conftest.py  test_arm_registry.py  test_deployment_runtime.py  (+16 more)
(+341 files in other folders)
