[project]
name = "nextis-bridge"
version = "0.1.0"
description = "Nextis Bridge - Robotics teleoperation and training platform"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning:lerobot.*",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = [
    "E501",   # Line too long (existing codebase has many long lines)
    "F401",   # Unused imports (many conditional imports in try/except blocks)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
